Testsuite/ManualTests/2858/2858.c.gcov
        -:    0:Source:2858.c
        -:    0:Graph:2858.gcno
        -:    0:Data:2858.gcda
        -:    0:Runs:1
        -:    1:/* { dg-do compile { target { powerpc*-*-linux* && lp64 } } } */
        -:    2:/* { dg-options "-Wall" } */
        -:    3:/* Testcase to check for ABI compliance of parameter passing
        -:    4:   for the PowerPC64 ABI.  */
        -:    5:
        -:    6:typedef int __attribute__((vector_size(16))) v4si;
        -:    7:typedef int __attribute__((vector_size(8))) v2si;
        -:    8:
        1:    9:v4si f(v4si v) { /* { dg-error "altivec instructions are disabled" "PR18631" {
        -:   10:                    xfail *-*-* } } */
        1:   11:  return v;
        -:   12:}
        -:   13:
        1:   14:v2si g(v2si v) { return v; }
        -:   15:
        1:   16:int main() {
        1:   17:  v4si v = {1, 2, 3, 4};
        1:   18:  v2si w = {5, 6};
        1:   19:  v = f(v); /* { dg-error "altivec instructions are disabled" "PR18631" { xfail
        -:   20:               *-*-* } } */
        1:   21:  w = g(w);
        1:   22:  return 0;
        -:   23:}
